--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Contenedor de botones -->
         <div class="button-container">
-            <button class="promo-button" onclick="window.location.href='promociones.html'">PROMOCIONES</button>
+            <button class="promo-button" onclick="window.location.href='promociones.html?fullscreen=true'">PROMOCIONES</button>
             <button class="menu-button" onclick="window.location.href='menu-espanol.html'">MENÚ EN ESPAÑOL</button>
             <button class="menu-button" onclick="window.location.href='menu-portugues.html'">MENÚ EM PORTUGUÊS</button>
             <button class="menu-button" onclick="window.location.href='menu-ingles.html'">MENU IN ENGLISH</button>
