--- a/promociones.html
+++ b/promociones.html
@@ -1,32 +1,41 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Promociones</title>
-    <link rel="stylesheet" href="styles.css">
-    <script>
-        // Activar pantalla completa al cargar la página
-        window.onload = () => {
-            const enterFullscreen = () => {
-                const docEl = document.documentElement;
-                if (docEl.requestFullscreen) {
-                    docEl.requestFullscreen();
-                } else if (docEl.mozRequestFullScreen) { // Soporte para Firefox
-                    docEl.mozRequestFullScreen();
-                } else if (docEl.webkitRequestFullscreen) { // Soporte para Chrome, Safari y Opera
-                    docEl.webkitRequestFullscreen();
-                } else if (docEl.msRequestFullscreen) { // Soporte para Edge
-                    docEl.msRequestFullscreen();
+    <!DOCTYPE html>
+    <html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=2.0">
+        <title>Promociones</title>
+        <link rel="stylesheet" href="styles.css">
+        <script>
+            // Activar pantalla completa si el parámetro "fullscreen" está presente en la URL
+            window.onload = () => {
+                const params = new URLSearchParams(window.location.search);
+                if (params.get("fullscreen") === "true") {
+                    const enterFullscreen = () => {
+                        const docEl = document.documentElement;
+                        if (docEl.requestFullscreen) {
+                            docEl.requestFullscreen();
+                        } else if (docEl.mozRequestFullScreen) {
+                            docEl.mozRequestFullScreen();
+                        } else if (docEl.webkitRequestFullscreen) {
+                            docEl.webkitRequestFullscreen();
+                        } else if (docEl.msRequestFullscreen) {
+                            docEl.msRequestFullscreen();
+                        }
+                    };
+    
+                    if (!document.fullscreenElement) {
+                        enterFullscreen();
+                    }
                 }
             };
-
-            // Intenta entrar en pantalla completa si no lo está
-            if (!document.fullscreenElement) {
-                enterFullscreen();
-            }
-        };
-    </script>
+        </script>
+    </head>
+    <body>
+        <h1>Promociones</h1>
+        <!-- Contenido de promociones -->
+    </body>
+    </html>
+    
 </head>
     <style>
         /* Estilo para el botón "Inicio" */
