--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -25,7 +25,7 @@
             color: white; /* Letra blanca */
             background-color: #f39c12; /* Color de fondo de los botones */
             border: none;
-            padding: 10px 20px;
+            padding: 10px 20px;c
             margin: 5px;
             cursor: pointer;
         }
@@ -37,8 +37,41 @@
             object-fit: cover; /* Asegura que la imagen se ajuste sin distorsionarse */
         }
     </style>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Promociones</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                text-align: center;
+                margin-top: 50px;
+            }
+        </style>
+        <script>
+            // Activar pantalla completa automáticamente
+            window.onload = () => {
+                if (!document.fullscreenElement) {
+                    const docEl = document.documentElement;
+                    if (docEl.requestFullscreen) docEl.requestFullscreen();
+                    else if (docEl.mozRequestFullScreen) docEl.mozRequestFullScreen();
+                    else if (docEl.webkitRequestFullscreen) docEl.webkitRequestFullscreen();
+                    else if (docEl.msRequestFullscreen) docEl.msRequestFullscreen();
+                }
+            };
+        </script>
+    </head>
+    <body>
+        <h1>Promociones</h1>
+        <button onclick="window.location.href='index.html';">Volver a Inicio</button>
+    </body>
+    </html>
+    
 </head>
 <body>
+    <button onclick="window.location.href='index.html';">Volver a Inicio</button>
     <header>
         <div class="logo-container">
             <img src="logo.png" alt="Big Pizza Logo" class="logo">
