--- a/promociones.html
+++ b/promociones.html
@@ -1,65 +1,76 @@
-    <!DOCTYPE html>
-    <html lang="es">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.2">
-        <title>Promociones</title>
-        <link rel="stylesheet" href="styles.css">
-        <script>
-            // Activar pantalla completa si el parámetro "fullscreen" está presente en la URL
-            window.onload = () => {
-                const params = new URLSearchParams(window.location.search);
-                if (params.get("fullscreen") === "true") {
-                    const enterFullscreen = () => {
-                        const docEl = document.documentElement;
-                        if (docEl.requestFullscreen) {
-                            docEl.requestFullscreen();
-                        } else if (docEl.mozRequestFullScreen) {
-                            docEl.mozRequestFullScreen();
-                        } else if (docEl.webkitRequestFullscreen) {
-                            docEl.webkitRequestFullscreen();
-                        } else if (docEl.msRequestFullscreen) {
-                            docEl.msRequestFullscreen();
-                        }
-                    };
-    
-                    if (!document.fullscreenElement) {
-                        enterFullscreen();
-                    }
-                }
-            };
-        </script>
-    </head>
-</head>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Promociones</title>
+    <link rel="stylesheet" href="styles.css">
+    <script>
+        // Activar pantalla completa si el parámetro "fullscreen" está presente en la URL
+        window.onload = () => {
+            const params = new URLSearchParams(window.location.search);
+            if (params.get("fullscreen") === "true") {
+                const enterFullscreen = () => {
+                    const docEl = document.documentElement;
+                    if (docEl.requestFullscreen) docEl.requestFullscreen();
+                    else if (docEl.mozRequestFullScreen) docEl.mozRequestFullScreen();
+                    else if (docEl.webkitRequestFullscreen) docEl.webkitRequestFullscreen();
+                    else if (docEl.msRequestFullscreen) docEl.msRequestFullscreen();
+                };
+
+                if (!document.fullscreenElement) enterFullscreen();
+            }
+        };
+    </script>
     <style>
-        /* Estilo para el botón "Inicio" */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
         .inicio-button {
-            position: fixed; /* Fija el botón para que siempre esté visible */
-            top: 10px; /* Espaciado desde la parte superior */
-            left: 10px; /* Espaciado desde la parte izquierda */
-            background-color: orange; /* Color de fondo */
-            color: white; /* Color de texto */
-            border: none; /* Sin bordes */
-            padding: 10px 20px; /* Relleno interno */
-            font-size: 16px; /* Tamaño de fuente */
-            border-radius: 5px; /* Bordes redondeados */
-            cursor: pointer; /* Cambia el cursor a mano */
-            z-index: 1000; /* Asegura que esté encima de las imágenes */
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            background-color: orange;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1000;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
         }
 
         .inicio-button:hover {
-            background-color: #e67e22; /* Color más oscuro al pasar el cursor */
+            background-color: #e67e22;
+        }
+
+        .slideshow-container {
+            position: relative;
+            max-width: 100%;
+            margin: auto;
+        }
+
+        .slide {
+            display: none;
+        }
+
+        .promo-image {
+            width: 100%;
+            height: auto;
         }
     </style>
 </head>
 <body>
-    <!-- Botón Inicio -->
+    <!-- Botón para regresar al inicio -->
     <button class="inicio-button" onclick="window.location.href='index.html'">Inicio</button>
 
-    <!-- Contenedor principal para la presentación de diapositivas -->
+    <!-- Contenedor de la presentación de imágenes -->
     <div class="slideshow-container">
-        <!-- Cada div con la clase 'slide' es una imagen de la presentación -->
         <div class="slide fade">
             <img src="promo1.jpg" alt="Promoción 1" class="promo-image">
         </div>
@@ -74,21 +85,17 @@
         </div>
     </div>
 
-    <!-- JavaScript para el slideshow -->
     <script>
         let slideIndex = 0;
-        showSlides();
-
         function showSlides() {
-            let slides = document.querySelectorAll(".slide");
-            for (let i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none"; // Oculta todas las imágenes
-            }
+            const slides = document.querySelectorAll(".slide");
+            slides.forEach(slide => (slide.style.display = "none"));
             slideIndex++;
-            if (slideIndex > slides.length) { slideIndex = 1; } // Reinicia el índice si es necesario
-            slides[slideIndex - 1].style.display = "block"; // Muestra la siguiente imagen
-            setTimeout(showSlides, 4000); // Cambia de imagen cada 4 segundos
+            if (slideIndex > slides.length) slideIndex = 1;
+            slides[slideIndex - 1].style.display = "block";
+            setTimeout(showSlides, 4000); // Cambiar cada 4 segundos
         }
+        showSlides();
     </script>
 </body>
 </html>
