--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -6,30 +6,10 @@
     <title>Menú Español - Big Pizza</title>
     <link rel="stylesheet" href="menu.css">
     <script>
+        // Activar pantalla completa automáticamente al cargar la página
         document.addEventListener("DOMContentLoaded", () => {
-            if (localStorage.getItem('fullscreen') === 'true') {
-                const elem = document.documentElement;
-                if (elem.requestFullscreen) {
-                    elem.requestFullscreen();
-                } else if (elem.webkitRequestFullscreen) {
-                    elem.webkitRequestFullscreen();
-                } else if (elem.msRequestFullscreen) {
-                    elem.msRequestFullscreen();
-                }
-            }
-        });
-    </script>
-    <script>
-        // Función para abrir en pantalla completa
-        function openFullscreen(pageUrl) {
-            localStorage.setItem('fullscreen', 'true'); // Guardar estado de pantalla completa
-            window.location.href = pageUrl;
-        }
-
-        // Al cargar la página, verificar si debe estar en pantalla completa
-        document.addEventListener("DOMContentLoaded", () => {
-            if (localStorage.getItem('fullscreen') === 'true') {
-                const elem = document.documentElement; // Elemento raíz
+            const elem = document.documentElement;
+            if (!document.fullscreenElement) {
                 if (elem.requestFullscreen) {
                     elem.requestFullscreen();
                 } else if (elem.webkitRequestFullscreen) { // Para Safari
@@ -49,47 +29,29 @@
             font-size: 2em;
             font-weight: bold;
             color: #333;
-            width: 100%; /* Hace que la franja ocupe todo el ancho */
-            box-sizing: border-box; /* Asegura que el padding no cause desbordamiento */
-            margin-top: 20px; /* Espacio entre los botones y la franja */
+            width: 100%;
+            box-sizing: border-box;
+            margin-top: 20px;
         }
 
         /* Estilo para los botones */
         .home-button, .promo-button {
-            font-size: 1.2em; /* Aumentar tamaño de la letra */
-            color: white; /* Letra blanca */
-            background-color: #f39c12; /* Color de fondo de los botones */
+            font-size: 1.2em;
+            color: white;
+            background-color: #f39c12;
             border: none;
-            padding: 10px 20px;c
+            padding: 10px 20px;
             margin: 5px;
             cursor: pointer;
         }
 
         /* Ajuste de tamaño de la imagen de la pizza */
         .masa-option img {
-            width: 356px; /* Ancho de la imagen */
-            height: 232px; /* Alto de la imagen */
-            object-fit: cover; /* Asegura que la imagen se ajuste sin distorsionarse */
+            width: 356px;
+            height: 232px;
+            object-fit: cover;
         }
     </style>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Promociones</title>
-        <script>
-            // Activar pantalla completa automáticamente
-            window.onload = () => {
-                if (!document.fullscreenElement) {
-                    const docEl = document.documentElement;
-                    if (docEl.requestFullscreen) docEl.requestFullscreen();
-                    else if (docEl.mozRequestFullScreen) docEl.mozRequestFullScreen();
-                    else if (docEl.webkitRequestFullscreen) docEl.webkitRequestFullscreen();
-                    else if (docEl.msRequestFullscreen) docEl.msRequestFullscreen();
-                }
-            };
-        </script>
 </head>
 <body>
     <header>
@@ -102,7 +64,6 @@
             <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">PROMOCIONES</button>
         </div>
 
-        <!-- Franja blanca con la palabra PIZZAS -->
         <div class="pizza-title">PIZZAS</div>
     </header>
 
