--- a/menu-espanol.html
+++ b/menu-espanol.html
@@ -21,7 +21,7 @@
         }
 
         /* Estilo para los botones */
-        .home-button, .promo-button {
+        .home-button, .promo-button, .fullscreen-button {
             font-size: 1.2em; /* Aumentar tamaño de la letra */
             color: white; /* Letra blanca */
             background-color: #f39c12; /* Color de fondo de los botones */
@@ -38,8 +38,39 @@
             object-fit: cover; /* Asegura que la imagen se ajuste sin distorsionarse */
         }
     </style>
-</head>
 
+    <script>
+        // Función para activar el modo pantalla completa
+        function toggleFullScreen() {
+            if (!document.fullscreenElement &&    // Si no estamos en pantalla completa
+                !document.mozFullScreenElement && // Firefox
+                !document.webkitFullscreenElement && // Chrome, Safari
+                !document.msFullscreenElement) { // IE/Edge
+                // Solicitamos pantalla completa
+                if (document.documentElement.requestFullscreen) {
+                    document.documentElement.requestFullscreen();
+                } else if (document.documentElement.mozRequestFullScreen) { // Firefox
+                    document.documentElement.mozRequestFullScreen();
+                } else if (document.documentElement.webkitRequestFullscreen) { // Chrome, Safari
+                    document.documentElement.webkitRequestFullscreen();
+                } else if (document.documentElement.msRequestFullscreen) { // IE/Edge
+                    document.documentElement.msRequestFullscreen();
+                }
+            } else {
+                // Si ya estamos en pantalla completa, salimos de ella
+                if (document.exitFullscreen) {
+                    document.exitFullscreen();
+                } else if (document.mozCancelFullScreen) { // Firefox
+                    document.mozCancelFullScreen();
+                } else if (document.webkitExitFullscreen) { // Chrome, Safari
+                    document.webkitExitFullscreen();
+                } else if (document.msExitFullscreen) { // IE/Edge
+                    document.msExitFullscreen();
+                }
+            }
+        }
+    </script>
+</head>
 <body>
     <header>
         <div class="logo-container">
@@ -49,6 +80,8 @@
         <div class="buttons-container">
             <button class="home-button" onclick="window.location.href='index.html'">INICIO</button>
             <button class="promo-button" onclick="window.location.href='https://jessiquinterot.github.io/mi-proyecto/promociones.html'">PROMOCIONES</button>
+            <!-- Botón de pantalla completa -->
+            <button class="fullscreen-button" onclick="toggleFullScreen()">Modo Pantalla Completa</button>
         </div>
 
         <!-- Franja blanca con la palabra PIZZAS -->
@@ -152,10 +185,5 @@
     <footer>
         <p>&copy; 2024 Servicios Madeirense | Todos los derechos reservados</p>
     </footer>
-
-    <script>
-        // Solicitar pantalla completa al cargar la página
-        document.documentElement.requestFullscreen();
-    </script>
 </body>
 </html>
